# RItem

./: .env.example  .gitignore  DEPLOY_SERVER_CN.md  langgraph.json  pyproject.toml
app/: main.py  mcp_server.py
app/agents/: app.py
app/api/v1/: auth.py  chat.py  deps.py  items.py  oss.py  settings.py
app/common/: logger.py
app/models/: schemas.py
app/services/: auth.py  chat_threads.py  image_generation.py  items.py
app/static/: index.html
app/static/assets/: index-7_T_JgRR.css  index-BaEnVbWj.js  index-C_4AbkVj.js  index-ZGtWitUv.js
docs/: mcp.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  styles.css
frontend/src/components/: AppSidebar.vue  ToastMessage.vue  icons.js
frontend/src/utils/: markdown.js
frontend/src/views/: AuthView.vue  ChatView.vue  ItemsView.vue  SettingsView.vue
tests/: test_api_boundaries.py
