[project]
name = "rememberitem"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alibabacloud-oss-v2>=1.3.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.24",
    "logger>=1.4",
    "mcp>=1.27.0",
    "openai>=2.34.0",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
